<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Stargate Quiz</string>

    <!-- Landing page -->
    <string name="headerText">Stargate Quiz</string>
    <string name="enter">Click to Enter the Stargate Quiz</string>

    <string name="welcome">Welcome to the Stargate Quiz</string>

    <!-- Welcome page -->
    <string name="instructions">Please enter your name in the text box below and tap Start</string>
    <string name="enterName">Name</string>
    <string name="noGoingBack">There is no turning back!</string>

    <!-- Please answer the question toast message -->
    <string name="pleaseAnswer">Please answer the question before proceeding</string>

    <!-- Button Text-->
    <string name="nextButtonText">Next</string>
    <string name="finishButtonText">Finish</string>

    <!-- Question Header "Question" -->
    <string name="questionNumber">Question 1</string>
    <string name="layoutText">layout</string>

    <!-- Question 1 -->
    <string name="question1">In the film Stargate where was the first Earth Stargate discovered?</string>
    <string name="answer1A">Tenochtitlan</string>
    <string name="answer1B">Athens</string>
    <string name="answer1C">Giza</string>
    <string name="answer1D">Rome</string>

    <!-- Question 2 -->
    <string name="question2">What are the names of the characters shown in the image below?</string>
    <string name="answer2A">Daniel Jackson</string>
    <string name="answer2B">Walter Harriman</string>
    <string name="answer2C">Apophis</string>
    <string name="answer2D">Chekov</string>

    <!-- Too many checkboxes checked toast message -->
    <string name="tooManyChecked">Please only check 2 boxes</string>

    <!-- Question 3-->
    <string name="question3">How many chevrons are there on the Stargate?</string>
    <string name="question3A">6</string>
    <string name="question3B">7</string>
    <string name="question3C">9</string>
    <string name="question3D">12</string>

    <!-- Question  4-->
    <string name="question4">What are humans from Earth known throughout the galaxy in the Stargate SG1 series?</string>
    <string name="answer4A">Mauri</string>
    <string name="answer4B">Ori</string>
    <string name="answer4C">Hobbits</string>
    <string name="answer4D">Tau\'ri</string>

    <!-- Question 5-->
    <string name="question5">What is the name of the actor who plays the character shown in the image below?</string>
    <string name="answer5">Richard Dean Anderson</string>
    <string name="q5EditText">Actors name....</string>

    <!-- Question 6 -->
    <string name="question6">In Stargate SG1 what race does Teal\'c of Chulak belong to?</string>
    <string name="answer6A">Human</string>
    <string name="answer6B">Jaffa</string>
    <string name="answer6C">Goa\'uld</string>
    <string name="answer6D">Asgard</string>

    <!-- Quiz Results -->
    <string name="quizResultsHeader">Quiz Results</string>
    <string name="correct_answer_is">Correct Answer:</string>
    <string name="questionNumberText">Question</string>
    <string name="q3EditTextHint">Numeric entry</string>
    <string name="q1">Question 1</string>
    <string name="yourAnswer">Your answer:</string>
    <string name="wellDone">Well done, you answered correctly</string>
    <string name="sorry">Sorry, you answered incorrectly</string>
    <string name="q2">Question 2</string>
    <string name="q3">Question 3</string>
    <string name="q4">Question 4</string>
    <string name="q5">Question 5</string>
    <string name="thankYou">Thank you for taking the Stargate Quiz.\n\nTry again? Tap Restart.</string>

    <!-- Button text -->
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="next">Next</string>

</resources>
